part of ch2